# q_task

./: .gitignore  README.MD  docker-compose.yaml  env.example  init.sql  instructions.md  pyproject.toml  test_integration.py
app/: api.py  config.py  main.py  models.py  postgres.py  redis.py  redis_client.py
app/services/: calculations.py  margin.py  trading.py
tests/: test_api.py  test_calculations_service.py  test_config.py  test_margin_service.py  test_redis_clients.py  test_trading_service.py
